--- a/demo.html
+++ b/demo.html
@@ -13,13 +13,13 @@
 
 </body>
 <script>
-    // const defaultPrivateKey = '私钥';
+    const defaultPrivateKey = '私钥';
     const rpc = new eosjs_jsonrpc.JsonRpc('http://59.110.220.75:8888');
-    // const signatureProvider = new eosjs_jssig.JsSignatureProvider([defaultPrivateKey]);
-    // const api = new eosjs_api.Api({rpc, signatureProvider});
+    const signatureProvider = new eosjs_jssig.JsSignatureProvider([defaultPrivateKey]);
+    const api = new eosjs_api.Api({rpc, signatureProvider});
 
     let getKeyAccounts_test = function () {
-        rpc.history_get_key_accounts('EOS61KPhJU27WJjN71PMB8EeBceEcv5vnBs87wSpDsPqaPQtCR9SG').then(result => {
+        rpc.history_get_key_accounts('EOS7FMr9He7k56gJNt95FNqXVhUex7zgPNz6PkfJ4NZNv4KgWZ3kS').then(result => {
             // 输出结果
             console.log('通过公钥获取账户名', result);
         }).catch(e => {
@@ -30,7 +30,7 @@
     getKeyAccounts_test();
 
     let getAccount_test = function () {
-        rpc.get_account('sakuya').then(result => {
+        rpc.get_account('hpnettest111').then(result => {
             // 输出结果
             console.log('查询账户信息', result);
         }).catch(e => {
@@ -43,7 +43,7 @@
     let getBalance_test = function () {
         rpc.get_currency_balance(
             'eosio.token',  // 目标币合约
-            'sakuya', // 目标账户
+            'hpnettest111', // 目标账户
             'TOK'           // 目标币名
         ).then(result => {
             // 输出结果
@@ -57,7 +57,7 @@
 
     let getActions_test = function () {
         rpc.history_get_actions(
-            'sakuya', // 目标账户
+            'hpnettest111', // 目标账户
             -1,             // 查询起始位置
             -10,            // 查询偏移量
         ).then(result => {
@@ -75,12 +75,12 @@
             account: 'eosio.token',     // 合约名
             name: 'transfer',           // 合约方法
             authorization: [{
-                actor: 'sakuya',  // 签名账户
+                actor: 'hpnettest111',  // 签名账户
                 permission: 'active',
             }],
             data: {
-                from: 'sakuya',   // 发送账户
-                to: 'wb',     // 接收账户
+                from: 'hpnettest111',   // 发送账户
+                to: 'hpnettest222',     // 接收账户
                 quantity: '0.0001 TOK', // 发送金额
                 memo: 'test'                // 备注
             }
